# breach-solver-extended

./: .gitignore  README.md  main.py  pyproject.toml
src/breach_solver/breacher/: __init__.py  solver_abc.py  solver_registry.py
src/breach_solver/breacher/solvers/scip/: __init__.py  context.py  interface.py
src/breach_solver/breacher/solvers_configs/: base_config.py  scip_config.py
src/breach_solver/core/: base_setup.py
src/breach_solver/core/structs/: solution.py  task.py
src/breach_solver/reader/: __init__.py
src/breach_solver/reader/template_matching/matcher/: match_struct.py  matcher.py
src/breach_solver/reader/template_matching/structs/: config.py  image_version.py
src/breach_solver/reader/template_matching/templates/: BUFFER_CELL.npz
src/breach_solver/ui/: entrypoint.py
src/breacher/: __init__.py  solver_abc.py  solver_configs.py  solver_registry.py
src/breacher/solvers/: __init__.py
src/breacher/solvers/scip/: context.py  extractor.py  interface.py  runner.py
src/breacher/solvers_configs/: __init__.py
src/core/: __init__.py  base_setup.py  logging_config.py
src/core/structs/: __init__.py  soft_task.py  solution.py  task.py
src/image_reader/: __init__.py  image_loader.py  reader_abc.py
src/image_reader/template_matching/: match_grouper.py  preprocessor.py  scanner.py  template_loader.py
src/image_reader/template_matching/matcher/: __init__.py  match_struct.py  matcher.py
src/image_reader/template_matching/structs/: __init__.py  image_version.py
src/image_reader/template_matching/templates/: 7A.npz  E9.npz  X9.npz  XH.npz  XR.npz  XX.npz
src/reader/: __init__.py  image_loader.py
src/reader/template_matching/: __init__.py  match_grouper.py  preprocessor.py  scanner.py  template_loader.py
src/reader/template_matching/matcher/: match_struct.py  matcher.py
src/reader/template_matching/structs/: config.py  image_version.py
src/reader/template_matching/templates/: 1C.npz  55.npz  BD.npz  FF.npz  IX.npz
