[project]
name = "breach-solver-extended"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.2.6", # opencv dep
    "opencv-python>=4.12.0.88",
    "pyscipopt>=5.5.0",
]

[dependency-groups]
dev = [
    "icecream>=2.1.5",
    "matplotlib>=3.10.3",
]
